--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -46,7 +46,7 @@ p.alert, p.notice {
 	.navbar-nav > li > a {
 		color: #222;
 		&:hover {
-			color: darken(#f1c40f, 5%);
+			color: darken(#b7b7b7, 5%);
 			transition: 0.5s;
 		}
 	}
