--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -7,6 +7,7 @@
   	<%= f.input :first_name, required: true, autofocus: true %>
   	<%= f.input :last_name, required: true, autofocus: false %>
     <%= f.input :email, required: true, autofocus: false %>
+    <%= f.input :birthday, :as => :date, :start_year => Date.today.year - 12, :end_year => Date.today.year - 100, :order => [:day, :month, :year], required: true %>
     <%= f.input :password, required: true, hint: ("#{@minimum_password_length} characters minimum" if @minimum_password_length) %>
     <%= f.input :password_confirmation, required: true %>
   </div>
