Add initial CRUD for websites

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,6 +15,10 @@
         <div class="navbar-header">
           <%= link_to "Welp", root_path, class: "navbar-brand" %>
         </div>
+
+        <ul class="nav navbar-nav">
+          <li><%= link_to "Reviews", websites_path %></li>
+        </ul>
         
         <ul class="nav navbar-nav navbar-right">
           
