--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,7 @@
         <ul class="nav navbar-nav navbar-right">
           
           <% if user_signed_in? %>
-            <li><%= link_to current_user.first_name + " " + current_user.last_name, edit_user_registration_path %></li>
+            <li><%= link_to current_user.first_name + " " + current_user.last_name, "users/" + current_user.id.to_s %></li>
             <li><%= link_to "Sign Out", destroy_user_session_path, method: :delete %></li>
           <% else %>
             <li><%= link_to "Sign Up", new_user_registration_path %></li>
