--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,11 +1,17 @@
 <div class="container">
 	<div class="user-profile">
 		<div class="container">
-			<h2><%= @user.first_name + " " + @user.last_name %></h2>
+				<h2><%= @user.first_name + " " + @user.last_name %></h2>
+
 			<%= image_tag @user.user_img.url(:profile) %>
 			<p>
 				<label>Number of Reviews:</label> <%= @user.review_count%>
 			</p>
+				<% if user_signed_in? %>
+					<% if @user.id = current_user.id %>
+						<%= link_to "Edit Profile", edit_user_registration_path %>
+					<% end %>
+				<% end %>
 		</div>
 	</div>
 </div>
