Added review model and some styling

--- a/app/views/websites/index.html.erb
+++ b/app/views/websites/index.html.erb
@@ -1,5 +1,5 @@
 <h1>Websites</h1>
-<%= link_to "Write a Review", new_website_path %>
+<%= link_to "Add a new Website", new_website_path %>
 
 <% @websites.each do |website| %>
 	<h2><%= link_to website.url, website_path(website) %></h2>
