--- a/app/views/websites/index.html.erb
+++ b/app/views/websites/index.html.erb
@@ -1,6 +1,22 @@
 <h1>Websites</h1>
 <%= link_to "Write a Review", new_website_path %>
 
-<% @websites.each do |website| %>
-	<h2><%= link_to website.url, website_path(website) %></h2>
-<% end %>
+<div class="row">
+	<% @websites.each do |website| %>
+
+		
+			<%
+				img_url = 'http://logo.clearbit.com/' + website.url
+				res = Net::HTTP.get_response(URI.parse(img_url))
+				img_url = 'http://' + website.url + '/favicon.ico' unless res.code.to_i >= 200 && res.code.to_i < 400 #good codes will be betweem 200 - 399		
+				#res = Net::HTTP.get_response(URI.parse(img_url))
+				#img_url = 'Image Unavailable (PUT DEFAULT HERE)' unless res.code.to_i >= 200 && res.code.to_i < 400 #good codes will be betweem 200 - 399		
+			%>	
+
+			<div class="col-md-3">
+				<%= image_tag img_url, class: "website" %>
+				<h2><%= link_to website.url, website_path(website) %></h2>
+			</div>
+		
+	<% end %>
+</div>
