Center css and fix width images

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -16,6 +16,11 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
 
+.website {
+	height: 150px;
+	width: 150px;
+}
+
 /* General styles */
 
 body {
