--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -21,6 +21,11 @@
 	width: 150px;
 }
 
+.website-show {
+	height: 250px;
+	width: 250px;
+}
+
 @mixin background-tile {
 	box-sizing: border-box;
 	background-color: #fff;
