--- a/app/views/websites/index.html.erb
+++ b/app/views/websites/index.html.erb
@@ -3,7 +3,7 @@
 
 <% @websites.each do |website| %>
 	<div class="row">
-	
+
 		<div class="col-md-2">
 			<%= image_tag find_logo(website.url), class: "website" %>
 		</div>
@@ -22,7 +22,7 @@
 			</div>
 
 			<div class="row">
-				Category: ???
+				Tags: ???
 			</div>
 		
 		</div>
