--- a/app/views/websites/show.html.erb
+++ b/app/views/websites/show.html.erb
@@ -6,15 +6,19 @@
 		<div class="row">
 			<div class="col-md-3">
 				<%= image_tag find_logo(@website.url), class: "website-show" %>
-			</div>	
+			</div>
 
 			<div class="col-md-9">
 				<h3 class="website-desc"><%= @website.description %></h3>
 			</div>
-		</div>
-
-		<div class="row">
-			<%= link_to "Visit this site", "http://" + @website.url, class: "btn", target: :_blank %>
+			<div>
+				<%= link_to "Visit this site", "http://" + @website.url, class: "btn", target: :_blank %>
+			</div>
+			<div class="col-md-8">
+				<h2 class="avg-rating">Average Rating</h2>
+				<div class="average-review-rating" data-score=<%= @average_review %>></div>
+				<span class="number-of-reviews">Based on <%= @website.reviews.count %> reviews</span>
+			</div>	
 		</div>
 
 	<div class="reviews">
