--- a/app/views/websites/index.html.erb
+++ b/app/views/websites/index.html.erb
@@ -1,6 +1,27 @@
 <h1>Websites</h1>
-<%= link_to "Add a new Website", new_website_path %>
+<% if user_signed_in? %>
+    <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">
+      Add a new website
+    </button>
 
+    <!-- Modal -->
+    <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+            <h4 class="modal-title" id="myModalLabel">New website</h4>
+          </div>
+          <div class="modal-body">
+            ...
+          </div>
+        </div>
+      </div>
+    </div>
+
+
+  <%= link_to "Add a new Website", new_website_path %>
+<% end %>
 <% @websites.each do |website| %>
 	<div class="row">
 
@@ -30,6 +51,7 @@
 	</div>
 <% end %>
 
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 <script>
 	$('.review-rating').raty({
 		readOnly: true,
