--- a/app/views/websites/show.html.erb
+++ b/app/views/websites/show.html.erb
@@ -9,8 +9,22 @@
 			</div>	
 
 			<div class="col-md-9">
-				<h3 class="website-desc"><%= @website.description %></h3>
+
+				<div class="row">							
+					<h3 class="website-desc"><%= @website.description %></h3>
+				</div>
+
+				<div class="row">
+					Tags:
+					<% @tags.each do |tag| %>
+					<%= 			
+					    tag.title 
+					%>
+					<% end %>
+				</div>
+
 			</div>
+
 		</div>
 
 		<div class="row">
