--- a/app/views/websites/show.html.erb
+++ b/app/views/websites/show.html.erb
@@ -17,10 +17,8 @@
 				<div class="row">
 					Tags:
 					<% @tags.each do |tag| %>
-					<%= 			
-					    tag.title 
-					%>
-					<% end %>
+						<%= tag.title %>
+					<% end %>					
 				</div>
 
 			</div>
