--- a/app/views/reviews/_review.html.erb
+++ b/app/views/reviews/_review.html.erb
@@ -1,4 +1,6 @@
 <div class="review">
+	<% userName = User.find(review.user_id).first_name + " " + User.find(review.user_id).last_name %>
+	<h4><%= link_to userName, user_profile_path(review.user_id)  %></h3>
 	<div class="review-rating" data-score="<%= review.rating %>"></div>
 	<p class="review-commnet"><%= review.description %></p>
 
