--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
+
 	<div class="signup-form">
 		<h2>Sign up</h2>
 
@@ -15,10 +15,9 @@
 		  </div>
 
 		  <div class="form-actions">
-		    <%= f.button :submit, "Sign up" %>
+		    <%= f.button :submit, "Sign up", :class => 'btn btn-default' %>
 		  </div>
 		<% end %>
-
-		<%= render "devise/shared/links" %>
+    <br>
+		Already have an account? <%= render "devise/shared/links" %>
 	</div>
-</div>
