--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,20 +1,21 @@
-<div class="container">
+
 	<div class="user-profile">
 		<div class="container">
-				<h2><%= @user.first_name + " " + @user.last_name %></h2>
-
 			<%= image_tag @user.user_img.url(:profile) %>
-			<p>
-				<label>Number of Reviews:</label> <%= @user.review_count%>
-			</p>
+      <h2><%= @user.first_name + " " + @user.last_name %></h2>
+      <% if @user.review_count > 0 %>
+        <p>
+          <label>Number of Reviews:</label> <%= @user.review_count%>
+        </p>
 
-			<div class="container">
-				<div class="reviews">
-					<h2>Reviews made by <%= @user.first_name + " " + @user.last_name %></h2>
-					<%= render @user.reviews %>
-				</div>
-			</div>
-			
+
+        <div class="container">
+          <div class="reviews">
+            <h2>Reviews made by <%= @user.first_name + " " + @user.last_name %></h2>
+            <%= render @user.reviews %>
+          </div>
+        </div>
+      <% end %>
 			<% if user_signed_in? %>
 				<% if @user.id = current_user.id %>
 					<%= link_to "Edit Profile", edit_user_registration_path %>
@@ -22,7 +23,6 @@
 			<% end %>
 		</div>
 	</div>
-</div>
 
 <script>
 	$('.review-rating').raty({
