Create add tag functionality

--- a/app/views/websites/show.html.erb
+++ b/app/views/websites/show.html.erb
@@ -21,6 +21,10 @@
 					<% end %>					
 				</div>
 
+				<div>
+					<%= link_to "Add Tag", new_website_tag_path(@website) %>
+				</div>
+
 			</div>
 
 		</div>
