Change the way website displays tags

--- a/app/views/websites/show.html.erb
+++ b/app/views/websites/show.html.erb
@@ -16,9 +16,7 @@
 
 				<div class="row">
 					Tags:
-					<% @tags.each do |tag| %>
-						<%= tag.title %>
-					<% end %>					
+					<%= render @website.tags %>				
 				</div>
 
 				<div>
