--- a/app/views/websites/index.html.erb
+++ b/app/views/websites/index.html.erb
@@ -1,24 +1,15 @@
 <h1>Websites</h1>
 <% if user_signed_in? %>
-    <button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#myModal">
-      Add a new website
-    </button>
-
-    <!-- Modal -->
-    <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-      <div class="modal-dialog" role="document">
-        <div class="modal-content">
-          <div class="modal-header">
-            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-            <h4 class="modal-title" id="myModalLabel">New website</h4>
+      <%= form_tag websites_path, method: :get do %>
+          <div class='form-group'>
+            <div class = "col-sm-10" style = "padding-left: 0; padding-right: 0;">
+              <%= text_field_tag :query, params[:query], class: 'form-control'%>
+            </div>
+            <div class = "col-sm-2 nopadding" style = "padding-left: 0; padding-right: 0;">
+              <%= submit_tag 'Search', class: 'btn btn-default' %>
+            </div>
           </div>
-          <div class="modal-body">
-            ...
-          </div>
-        </div>
-      </div>
-    </div>
-
+      <% end %>
 
   <%= link_to "Add a new Website", new_website_path %>
 <% end %>
