--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -30,11 +30,14 @@
 	</div>
 
 <script>
-	$('.review-rating').raty({
-		readOnly: true,
-		score: function() {
-			return $(this).attr('data-score');
-		},
-		path: '/assets/'
-	});
+  if(c == null){
+      $('.review-rating').raty({
+          readOnly: true,
+          score: function() {
+              return $(this).attr('data-score');
+          },
+          path: '/assets/'
+      });
+      var c = 1;
+  }
 </script>
