--- a/app/views/websites/index.html.erb
+++ b/app/views/websites/index.html.erb
@@ -1,26 +1,27 @@
 <h1>Websites</h1>
 <% if user_signed_in? %>
-      <%= form_tag websites_path, method: :get do %>
-          <div class='form-group'>
-            <div class = "col-sm-10" style = "padding-left: 0; padding-right: 0;">
-              <%= text_field_tag :query, params[:query], class: 'form-control'%>
-            </div>
-            <div class = "col-sm-2 nopadding" style = "padding-left: 0; padding-right: 0;">
-              <%= submit_tag 'Search', class: 'btn btn-default' %>
-            </div>
-          </div>
-      <% end %>
-
-  <%= link_to "Add a new Website", new_website_path %>
+    <%= link_to "Add a new Website", new_website_path %>
+<% end %>
+<%= form_tag websites_path, method: :get do %>
+    <div class='form-group row'>
+      <div class = "col-sm-11" style = "padding-right: 0;">
+        <%= text_field_tag :query, params[:query], class: 'form-control'%>
+      </div>
+      <div class = "col-sm-1 input-block-level" style = "padding-right: 0;">
+        <%= submit_tag 'Search', class: 'btn btn-default input-block-level' %>
+      </div>
+    </div>
 <% end %>
 <% @websites.each do |website| %>
+    <br>
+    <div class = "user-profile">
 	<div class="row">
 
-		<div class="col-md-2">
+		<div class="col-sm-2">
 			<%= image_tag find_logo(website.url), class: "website" %>
 		</div>
 
-		<div class="col-md-10">
+		<div class="col-sm-10">
 			<div class="row">
 				<h2><%= link_to website.url, website_path(website) %></h2>
 			</div>
@@ -36,6 +37,12 @@
 		</div>
 		
 	</div>
+    </div>
+<% end %>
+
+<% if @websites.empty? %>
+    <h4>No matches found</h4>
+    <%= link_to "Would you like to make it?", new_website_path %>
 <% end %>
 
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
@@ -50,11 +57,14 @@
 </script>
 
 <script>
-	$('.average-review-rating').raty({
-		readOnly: true,
-		path: '/assets/',
-		score: function(){
-			return $(this).attr('data-score')
-		}
-	});
+  if(x == null){
+      $('.average-review-rating').raty({
+          readOnly: true,
+          path: '/assets/',
+          score: function(){
+              return $(this).attr('data-score')
+          }
+      });
+      var x = 1;
+  }
 </script>
