Functionality to not allow users to upvote or downvote thier own reviews and added admin capabilities

--- a/app/views/websites/new.html.erb
+++ b/app/views/websites/new.html.erb
@@ -1,3 +1,6 @@
+<% flash.each do |key, value| %>
+	<div class="alert alert-<%= key %>"><%= value %></div>
+<% end %>
 <h1>Create a review for:</h1>
 
 <%= render 'form' %>
