--- a/app/views/websites/index.html.erb
+++ b/app/views/websites/index.html.erb
@@ -1,3 +1,6 @@
+<% flash.each do |key, value| %>
+	<div class="alert alert-<%= key %>"><%= value %></div>
+<% end %>
 <h1>Websites</h1>
 <% if user_signed_in? %>
     <%= link_to "Add a new Website", new_website_path %>
