Fixed styling for reviews and websites

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -176,6 +176,7 @@ p.alert, p.notice {
 	}
 
 	.review {
+		width: 90%;
 		border-bottom: 1px solid gainsboro;
 		margin-bottom: 15px;
 		padding-bottom: 10px;
