--- a/app/views/reviews/_review.html.erb
+++ b/app/views/reviews/_review.html.erb
@@ -10,15 +10,15 @@
 
 		<%= review.get_upvotes.size %>
 		<%= link_to image_tag("fbthumbsup.png"), helpful_website_review_path(website_id: review.website_id, id: review.id), method: :put %>
-		
+
 		<%= review.get_downvotes.size %>
 		<%= link_to image_tag("fbthumbsdown.png"), unhelpful_website_review_path(website_id: review.website_id, id: review.id), method: :put %>
 
 
 		<% if review.user.id == current_user.id %>
 			<div class="links btn-group">
-				<%= link_to "Edit", edit_website_review_path(review.website, review), class: "btn btn-custom" %>
-				<%= link_to "Delete", website_review_path(review.website, review), method: :delete, data: {confirm: "Are you sure?"}, class: "btn btn-custom" %>
+				<%= button_to "Edit", edit_website_review_path(review.website, review), method: :get, class: "btn btn-default", form: {style: 'display:inline-block;'} %>
+				<%= button_to "Delete", website_review_path(review.website, review), method: :delete, data: {confirm: "Are you sure?"}, class: "btn btn-default", form: {style: 'display:inline-block;'} %>
 			</div>
 		<% end %>
 	<% end %>
