--- a/app/views/websites/index.html.erb
+++ b/app/views/websites/index.html.erb
@@ -2,9 +2,7 @@
 	<div class="alert alert-<%= key %>"><%= value %></div>
 <% end %>
 <h1>Websites</h1>
-<% if user_signed_in? %>
-    <%= link_to "Add a new Website", new_website_path %>
-<% end %>
+
 <%= form_tag websites_path, method: :get do %>
     <div class='form-group row'>
       <div class = "col-sm-11" style = "padding-right: 0;">
@@ -15,6 +13,11 @@
       </div>
     </div>
 <% end %>
+
+<% if user_signed_in? %>
+    <%= button_to "Add a new Website", new_website_path, :method => :get, class: "btn btn-default" %>
+<% end %>
+
 <% @websites.each do |website| %>
     <br>
     <div class = "website-page">
